--- a/infrastructure/cluster.yml
+++ b/infrastructure/cluster.yml
@@ -6,9 +6,10 @@ Parameters:
     Type: String
     Default: production
     Description: A name for the environment that this cloudformation will be part of.
-  CertificateArn:
-    Type: String
-    Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
+  # Uncomment to add an SSL cert to public facing app
+  #CertificateArn:
+  #  Type: String
+  #  Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
 
 Mappings:
   # Hard values for the subnet masks. These masks define
@@ -184,20 +185,20 @@ Resources:
       LoadBalancerArn: !Ref 'PublicLoadBalancer'
       Port: 80
       Protocol: HTTP
-  PublicLoadBalancerListenerHTTPS:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - PublicLoadBalancer
-    Properties:
-      DefaultActions:
-        - TargetGroupArn: !Ref 'DummyTargetGroupPublic'
-          Type: 'forward'
-      LoadBalancerArn: !Ref 'PublicLoadBalancer'
-      Port: 443
-      Protocol: HTTPS
-      # Uncomment to add a SSL certificate for public facing app
-      #Certificates:
-      #  - CertificateArn: !Ref 'CertificateArn'
+  # Uncomment to add a HTTPS listener with SSL cert
+  # PublicLoadBalancerListenerHTTPS:
+  #   Type: AWS::ElasticLoadBalancingV2::Listener
+  #   DependsOn:
+  #     - PublicLoadBalancer
+  #   Properties:
+  #     DefaultActions:
+  #       - TargetGroupArn: !Ref 'DummyTargetGroupPublic'
+  #         Type: 'forward'
+  #     LoadBalancerArn: !Ref 'PublicLoadBalancer'
+  #     Port: 443
+  #     Protocol: HTTPS
+  #     Certificates:
+  #       - CertificateArn: !Ref 'CertificateArn'
 
   # This is an IAM role which authorizes ECS to manage resources on your
   # account on your behalf, such as updating your load balancer with the
@@ -325,11 +326,11 @@ Outputs:
     Value: !Ref PublicLoadBalancerListenerHTTP
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTP' ] ]
-  HTTPSListener:
-    Description: The ARN of the public load balancer's HTTPS Listener
-    Value: !Ref PublicLoadBalancerListenerHTTPS
-    Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTPS' ] ]
+  # HTTPSListener:
+  #   Description: The ARN of the public load balancer's HTTPS Listener
+  #   Value: !Ref PublicLoadBalancerListenerHTTPS
+  #   Export:
+  #     Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTPS' ] ]
   VPCId:
     Description: The ID of the VPC that this stack is deployed in
     Value: !Ref 'VPC'
