--- a/infrastructure/resources.yml
+++ b/infrastructure/resources.yml
@@ -184,7 +184,7 @@ Resources:
       SecurityGroupIds:
         - !Ref 'OpenSearchServerlessAccess'
   OpenSearchServerlessNetworkAccessPolicy:
-    Type: AWS::OpenSearchServerless::AccessPolicy
+    Type: AWS::OpenSearchServerless::SecurityPolicy
     Properties:
       Name: access-chat-messages-in-vpc
       Description: 'Allows accessing the chat messages collection via the VPC endpoint'
@@ -210,6 +210,16 @@ Outputs:
     Value: !GetAtt 'ChatServiceRole.Arn'
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ChatServiceRole' ] ]
+  UsersTable:
+    Description: The name of the user table
+    Value: !Ref 'UsersTable'
+    Export:
+      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'UsersTable' ] ]
+  MessagesTable:
+    Description: The name of the message table
+    Value: !Ref 'MessagesTable'
+    Export:
+      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'MessagesTable' ] ]
   # MessageCollectionEndpoint:
   #   Description: The URL of the collection used to submit and search chat messages
   #   Value: !GetAtt 'MessageCollection.CollectionEndpoint'
