Start of making the cloudfront dist work

--- a/infrastructure/cluster.yml
+++ b/infrastructure/cluster.yml
@@ -306,6 +306,11 @@ Outputs:
     Value: !Join ['', ['http://', !GetAtt 'PublicLoadBalancer.DNSName']]
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ExternalUrl' ] ]
+  ExternalDnsName:
+    Description: The DNS name
+    Value: !GetAtt 'PublicLoadBalancer.DNSName'
+    Export:
+      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ExternalDnsName' ] ]
   ECSRole:
     Description: The ARN of the ECS role
     Value: !GetAtt 'ECSRole.Arn'
