--- a/infrastructure/web.yml
+++ b/infrastructure/web.yml
@@ -35,7 +35,7 @@ Resources:
     Properties:
       SourceConfiguration:
         AuthenticationConfiguration:
-          AccessRoleArn: !Ref AppRunnerRole
+          AccessRoleArn: !GetAtt AppRunnerRole.Arn
         ImageRepository:
           ImageRepositoryType: ECR
           ImageIdentifier: !Ref ImageUrl
