--- a/infrastructure/cloudfront.yml
+++ b/infrastructure/cloudfront.yml
@@ -47,7 +47,7 @@ Resources:
               Fn::ImportValue:
                 !Join [':', [!Ref 'EnvironmentName', 'WebEndpoint']]
             CustomOriginConfig:
-              OriginProtocolPolicy: 'http-only'
+              OriginProtocolPolicy: 'https-only'
               OriginKeepaliveTimeout: 60
           - Id: 'socket-app'
             DomainName:
