SSL support and updated domain name

--- a/infrastructure/cloudfront.yml
+++ b/infrastructure/cloudfront.yml
@@ -7,6 +7,20 @@ Parameters:
     Default: production
     Description: A name for the environment that this cloudformation will be part of.
 
+  CertArn:
+    Type: String
+    Default: 'no custom domain'
+    Description: Optional ARN of an Amazon Certificate Manager cert that is the
+                 SSL cert for the application
+
+  DomainName:
+    Type: String
+    Default: 'no custom domain'
+    Description: Optional domain name for the application when deployed.
+
+Conditions:
+  CustomHttpsDomainEnabled: !Not [ !Equals [ !Ref DomainName, 'no custom domain']]
+
 Resources:
 
   # Describes what to cache and for how long
@@ -39,6 +53,16 @@ Resources:
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
+        Aliases:
+          - !If [ 'CustomHttpsDomainEnabled', !Ref DomainName, !Ref AWS::NoValue ]
+        ViewerCertificate:
+          # If no custom domain specified, then use the default cert
+          CloudFrontDefaultCertificate: !If [ 'CustomHttpsDomainEnabled', !Ref AWS::NoValue, true]
+
+          # Otherwise use out custom cert from Amazon Certificate Manager
+          AcmCertificateArn: !If [ 'CustomHttpsDomainEnabled', !Ref CertArn, !Ref AWS::NoValue ]
+          MinimumProtocolVersion: !If [ 'CustomHttpsDomainEnabled', 'TLSv1.2_2021', !Ref AWS::NoValue ]
+          SslSupportMethod: !If [ 'CustomHttpsDomainEnabled', 'sni-only', !Ref AWS::NoValue ]
         DefaultRootObject: 'index.html'
         Enabled: true
         Origins:
